--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Spinners -->
-    <div class="d-flex justify-content-center ">
+    <div class="d-flex justify-content-center align-items-center ">
       <div id="spinner-toggle" class="d-none spinner-border text-info" role="status">
         <span class="visually-hidden"></span>
       </div>
